re PR debug/63581 (undefined references in debug_info)

2014-11-13  Rong Xu  <xur@google.com>

gcc:
	PR debug/63581
	* cfgrtl.c (emit_barrier_after_bb): Append the barrier to the
 	footer, instead of unconditionally overwritten

gcc/testsuite:
	PR debug/63581
	* g++.dg/tree-prof/pr63581.C: New test.

From-SVN: r217530